tests/resource/valid/control_flow/if_in_for_loop.mamba
for i in if True then 0..= 2 else 0 .. 2 do
    print("hello")
