tests/resource/invalid/type/control_flow/for_non_iterable.mamba
for i in 10 do
    print(i)
